# Copyright 2010-2011 Ilkka Halila
# Copyright 2019 Alexander Krivács Schrøder
#
# This file is part of Goblin Camp.
#
# Goblin Camp is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Goblin Camp is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Goblin Camp.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "goblin-camp"
version = "0.22.0"
authors = [
    "Ilkka Halila <gencontain@gmail.com>",
    "Alexander Krivács Schrøder <alexschrod@gmail.com>",
]
edition = "2018"

[dependencies]
rand="0.7"
tcod="0.15"
snafu="0.5"
