# Copyright 2010-2011 Ilkka Halila
# Copyright 2019 Alexander Krivács Schrøder
#
# This file is part of Goblin Camp Revival.
#
# Goblin Camp Revival is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Goblin Camp Revival is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Goblin Camp Revival.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "goblin-camp-revival"
version = "0.1.0"
authors = [
    "Ilkka Halila <gencontain@gmail.com>",
    "Alexander Krivács Schrøder <alexschrod@gmail.com>",
]
edition = "2018"

[dependencies]
rand="0.7"
tcod="0.15"
snafu="0.5"
clap = {version = "2", features = ["yaml"]}
slog = {version="2", features = ["max_level_trace", "release_max_level_trace"]}
slog-term="2"
slog-async="2"
derivative="1"
directories="2"
toml="0.5"
serde="1"
serde_derive = "1"
serde-tcod-config-parser = "0.1"
itertools="0.8"

# Hopefully this won't be necessary for too long; had to add HeightMap myself since it wasn't
# supported out of the box at the time I started writing this.
[patch.crates-io]
#tcod = { path = '..\tcod-rs' }
tcod = { git = "https://github.com/alexschrod/tcod-rs/", rev="3a8e5d4bad0dd6be8bd16e212622c96ef7fa4ba1" }
